[package]
name = "bevy_awc_hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = { version = "3", features = ["rustls"] }
bevy = "0.10.0"
futures-util = "0.3.27"
tokio = { version = "1.4.0", features = ["net", "io-util", "sync", "rt-multi-thread"] }
thiserror = "1.0.24"
