[package]
name = "bevy_awc_hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = "3.1.1"
bevy = "0.10.0"
futures-util = "0.3.27"
tokio = { version = "1.26", features = ["full"] }
tokio-tungstenite = "0.18.0"
tokio-util = "0.7.7"
